<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NoteActivity"
    tools:showIn="@layout/activity_note">

    <Spinner
        android:id="@+id/spinnerCourses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/app_name"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNoteTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="title"
        android:hint="Note title"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/spinnerCourses"
        app:layout_constraintStart_toStartOf="@id/spinnerCourses"
        app:layout_constraintTop_toBottomOf="@id/spinnerCourses" />

    <EditText
        android:id="@+id/editTextNoteText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="note"
        android:hint="note text"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/spinnerCourses"
        app:layout_constraintStart_toStartOf="@id/spinnerCourses"
        app:layout_constraintTop_toBottomOf="@id/editTextNoteTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>