<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/drawer_layout">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <include layout="@layout/layout_main_content" />
    </FrameLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_drawer_items"
        app:headerLayout="@layout/layout_nav_header"
        android:background="@color/white"/>



</androidx.drawerlayout.widget.DrawerLayout>